AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = rpn
rpn_SOURCES = src/rpn.cpp \
		src/rpn-branch.h \
		src/rpn-cmd.h \
		src/rpn-algebra.h \
		src/rpn-general-core.h \
		src/rpn-general.h \
		src/rpn-logs.h \
		src/rpn-stack.h \
		src/rpn-store.h \
		src/rpn-test.h \
		src/rpn-trig.h \
		src/stack.h

dist_noinst_SCRIPTS = autogen.sh
